lab1/Test/L1-A-10-0.output
Error Type B at Line 2
Error Type B at Line 8
Error Type B at Line 9
Error Type A at Line 13
Error Type A at Line 23
Error Type A at Line 32
Error Type A at Line 39
