lab1/Test/L1-A-10-0.cmm
struct {
}/ ;
float n [ 1965443449 ] 
;
struct GKgy5RhIsxt4VA7CzP1e {
};
int msLNk5gYcyPfOy8YyBc ( ) {
  struct = PPPco fujKx9sSzdR_BroB5KI ;
* {
    uhGTbo5ftLO3eIQG ;
    PwBk ;
    T ;
  }  if \( ACHVWadUxWRYlEj9cvMj )   n ;
else   while ( VcSxi1JKK ) {
    if ( UovZcuDoenA7DGjjlu )     svN65w8xtO5eK9eg2t 
      ;
else {
    }
  }

}
int YE2N9 ( ) {
  struct d0u \BENemRMUcc70vfLzB , g ;
  if ( rkfSi_JDXYgS5_0ZHga )   naWojKH ;
else   if ( lCke_7 )   return em2IPQlhfJQbUdhb ;


}
int ;
struct So1nzx1nHrAFg95te9 ;
struct f0XeigUnmC8eLQp YfFR_1E ( int QLDniZUaESmnvAhi6eQ 
  , struct aHfYlO ZLx0LrAdvHA ) '{
  int SfiyuLzDZ331CPye = b || oD9pTGk && B_mjBlhvGwJzM 
    < fp4Zsl2dhnypKvZz + - HQBvhxIpxhLR ( DeiVKGUxA1BsGIGuc1i 
    = rYKkdCQIMM = imp4mxXhyBSVSJpVYYBG >= n / ! BsbVuG 
    [ ShJT3TkAlp && sDCmWh7z46e == D ( _P3UK2xD , EPc5_e 
    || Xu36UPMIRnbtlw > toL5Z0T + - ( Hb_w5Fq2eMeuHPiwtY 
    / ( h != t53 ) <= 274533220 ) ) - bnwJznNvyiMrw8gA2 
    ] . eC6DDHokPhHpbmuO `/ Fi ( ) * ! ! 763328366.1990604136 
    ) ;
}
int ;
int s , W 

;
int ;
